--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ header {
 }
 
 #search {
+    margin: 50px;
     text-align: right;
     /* CSS styles for the search container */
     
@@ -62,7 +63,7 @@ h1{
   text-align: center;
   border-radius: 1%;
   border-width: 25px;
-  background-color: gray;
+  background-color: silver;
   color: #fff;
   padding: 15px;
   margin: 0;
@@ -70,4 +71,12 @@ h1{
 
 #weatherDescription{
   margin: 50px;
+}
+
+#forecastDisplay{
+  margin: 50px;
+}
+
+body{
+  background-color: #00008B;
 }
